[gd_scene load_steps=30 format=3 uid="uid://brxwfd43b8t4x"]

[ext_resource type="Texture2D" uid="uid://b34d6j0o5i473" path="res://assets/ui/star_empty.png" id="1_j77f4"]
[ext_resource type="Script" path="res://src/end_scene.gd" id="1_srch7"]
[ext_resource type="Texture2D" uid="uid://si5ss1ux6tch" path="res://assets/ui/star.png" id="2_bxkvv"]
[ext_resource type="Texture2D" uid="uid://bw80od2udayp4" path="res://assets/ui/gear.png" id="3_ln0xr"]
[ext_resource type="Theme" uid="uid://37elalvtqa6s" path="res://src/buttons.tres" id="5_7vobp"]
[ext_resource type="FontFile" uid="uid://br7j0ngbmc0f8" path="res://assets/ui/vt323.ttf" id="8_mccgr"]
[ext_resource type="Texture2D" uid="uid://c36nbshdroxv5" path="res://assets/ui/buttons/yellow_button12.png" id="9_k4jl4"]
[ext_resource type="AudioStream" uid="uid://1oflo2uupgv" path="res://assets/sound/back.mp3" id="10_y2os8"]
[ext_resource type="Texture2D" uid="uid://bjrkm04it1qdf" path="res://assets/ui/buttons/red_sliderDown.png" id="11_c7l5m"]
[ext_resource type="AudioStream" uid="uid://bmtahw41a2p2t" path="res://assets/sound/forward.mp3" id="11_q6thc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1vce4"]
atlas = ExtResource("2_bxkvv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8no8m"]
atlas = ExtResource("2_bxkvv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tpmm"]
atlas = ExtResource("2_bxkvv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i77b5"]
atlas = ExtResource("2_bxkvv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6278"]
atlas = ExtResource("2_bxkvv")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7losi"]
atlas = ExtResource("2_bxkvv")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hogro"]
atlas = ExtResource("2_bxkvv")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nx0ax"]
atlas = ExtResource("2_bxkvv")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_statn"]
atlas = ExtResource("2_bxkvv")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ranp5"]
atlas = ExtResource("2_bxkvv")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fjb6"]
atlas = ExtResource("2_bxkvv")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_42kaq"]
atlas = ExtResource("2_bxkvv")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0xs4"]
atlas = ExtResource("2_bxkvv")
region = Rect2(384, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_trmxs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_j77f4")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vce4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8no8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tpmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i77b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6278")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7losi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hogro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx0ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_statn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ranp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fjb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42kaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0xs4")
}],
"loop": true,
"name": &"filled",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cmlku"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iqrrp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q0qlb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s7gms"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_geqsm"]

[node name="EndScene" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_srch7")

[node name="Opacity" type="ColorRect" parent="."]
offset_right = 398.0
offset_bottom = 224.0
color = Color(0, 0, 0, 0.490196)

[node name="Star1" type="AnimatedSprite2D" parent="."]
position = Vector2(167, 46)
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_trmxs")
animation = &"filled"
autoplay = "filled"
frame_progress = 0.931275

[node name="Star2" type="AnimatedSprite2D" parent="."]
position = Vector2(199, 28)
scale = Vector2(1.75, 1.75)
sprite_frames = SubResource("SpriteFrames_trmxs")
animation = &"filled"
autoplay = "filled"

[node name="Star3" type="AnimatedSprite2D" parent="."]
position = Vector2(231, 46)
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_trmxs")
animation = &"filled"
autoplay = "filled"
frame_progress = 0.617965

[node name="Lvl1" type="TextureButton" parent="."]
offset_left = 116.0
offset_top = 84.0825
offset_right = 165.0
offset_bottom = 129.083
scale = Vector2(0.537, 0.537)
texture_normal = ExtResource("9_k4jl4")

[node name="Label" type="Label" parent="Lvl1"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 47.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("8_mccgr")
theme_override_font_sizes/font_size = 24
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lvl2" type="TextureButton" parent="."]
offset_left = 151.0
offset_top = 84.0825
offset_right = 200.0
offset_bottom = 129.083
scale = Vector2(0.537, 0.537)
texture_normal = ExtResource("9_k4jl4")

[node name="Label" type="Label" parent="Lvl2"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 47.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("8_mccgr")
theme_override_font_sizes/font_size = 24
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lvl3" type="TextureButton" parent="."]
offset_left = 185.843
offset_top = 84.0
offset_right = 234.844
offset_bottom = 129.0
scale = Vector2(0.5375, 0.5375)
texture_normal = ExtResource("9_k4jl4")

[node name="Label" type="Label" parent="Lvl3"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 47.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("8_mccgr")
theme_override_font_sizes/font_size = 24
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lvl4" type="TextureButton" parent="."]
offset_left = 220.844
offset_top = 84.0
offset_right = 269.844
offset_bottom = 129.0
scale = Vector2(0.537, 0.537)
texture_normal = ExtResource("9_k4jl4")

[node name="Label" type="Label" parent="Lvl4"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 47.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("8_mccgr")
theme_override_font_sizes/font_size = 24
text = "4"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Lvl5" type="TextureButton" parent="."]
offset_left = 255.844
offset_top = 84.0
offset_right = 304.844
offset_bottom = 129.0
scale = Vector2(0.537, 0.537)
texture_normal = ExtResource("9_k4jl4")

[node name="Label" type="Label" parent="Lvl5"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 47.0
offset_bottom = 43.0
theme_override_fonts/font = ExtResource("8_mccgr")
theme_override_font_sizes/font_size = 24
text = "5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pointer" type="Sprite2D" parent="."]
position = Vector2(199, 74)
scale = Vector2(0.375, 0.375)
texture = ExtResource("11_c7l5m")

[node name="BackSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_y2os8")

[node name="ForwardSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_q6thc")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_top = 120.0
offset_right = 398.0
offset_bottom = 224.0
theme_override_constants/margin_left = 110
theme_override_constants/margin_right = 110

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 35)
layout_mode = 2
theme = ExtResource("5_7vobp")
theme_override_font_sizes/font_size = 13
text = "Continue"

[node name="TrashMenu" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 23)
layout_mode = 2
theme = ExtResource("5_7vobp")
theme_override_font_sizes/font_size = 13
text = "View trash"

[node name="QuitMenu" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 23)
layout_mode = 2
theme = ExtResource("5_7vobp")
theme_override_font_sizes/font_size = 13
text = "Quit to menu"

[node name="Settings" type="TextureButton" parent="."]
offset_left = 7.0
offset_top = 192.0
offset_right = 39.0
offset_bottom = 224.0
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("3_ln0xr")

[node name="Fullscreen" type="Button" parent="."]
offset_left = 380.0
offset_top = 3.0
offset_right = 428.0
offset_bottom = 51.0
scale = Vector2(0.3, 0.3)
theme_override_styles/focus = SubResource("StyleBoxEmpty_cmlku")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_iqrrp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_q0qlb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_s7gms")
theme_override_styles/normal = SubResource("StyleBoxEmpty_geqsm")
toggle_mode = true

[connection signal="pressed" from="Lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="Lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="Lvl3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="Lvl4" to="." method="_on_lvl_4_pressed"]
[connection signal="pressed" from="Lvl5" to="." method="_on_lvl_5_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TrashMenu" to="." method="_on_trashmenu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitMenu" to="." method="_on_quitmenu_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Fullscreen" to="." method="_on_fullscreen_pressed"]
